// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileCard should be rendered correctly with Excel file 1`] = `
<div
  className="flexCell root uui-file_card uui-loading"
  style={
    Object {
      "alignSelf": undefined,
      "flexBasis": "100%",
      "flexGrow": undefined,
      "flexShrink": undefined,
      "minWidth": 0,
      "textAlign": undefined,
    }
  }
>
  <div
    className="uui-flex-row root uui-size-36 container align-items-top"
    style={
      Object {
        "columnGap": "6px",
        "rowGap": undefined,
      }
    }
  >
    <div
      className="container uui-icon uui-enabled xlsColor"
      style={Object {}}
    >
      <svg
        className=""
        height={24}
        width={24}
      />
    </div>
    <div
      className="flexCell"
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "100%",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "minWidth": 0,
          "textAlign": undefined,
        }
      }
    >
      <div
        className="root uui-text uui-size-18 lineHeight fontSize uui-color-tertiary uui-font-weight-400 uui-font-style-normal uui-typography fileName container"
        style={
          Object {
            "--uui-text-font-size": "14px",
            "--uui-text-line-height": "18px",
          }
        }
      >
        Test
      </div>
      <div
        className="root uui-text uui-size-18 lineHeight fontSize uui-color-tertiary uui-font-weight-400 uui-font-style-normal uui-typography container"
        style={
          Object {
            "--uui-text-font-size": "14px",
            "--uui-text-line-height": "18px",
          }
        }
      >
        XLS, 
        0 Bytes of 
        12.25 KB
      </div>
    </div>
    <div
      className="iconsBlock"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <svg
        className="root"
        height={18}
        width={18}
      >
        <circle
          cx={9}
          cy={9}
          fill="transparent"
          r={3}
          strokeDasharray={18.84955592153876}
          strokeDashoffset={18.84955592153876}
          strokeWidth={6}
        />
        <circle
          cx={9}
          cy={9}
          fill="transparent"
          r={8}
          strokeWidth={1}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`FileCard should be rendered correctly with doc file 1`] = `
<div
  className="flexCell root uui-file_card uui-loading"
  style={
    Object {
      "alignSelf": undefined,
      "flexBasis": "0",
      "flexGrow": undefined,
      "flexShrink": undefined,
      "minWidth": "140px",
      "textAlign": undefined,
    }
  }
>
  <div
    className="uui-flex-row root uui-size-36 container align-items-top"
    style={
      Object {
        "columnGap": "6px",
        "rowGap": undefined,
      }
    }
  >
    <div
      className="container uui-icon uui-enabled docColor"
      style={Object {}}
    >
      <svg
        className=""
        height={24}
        width={24}
      />
    </div>
    <div
      className="flexCell"
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "100%",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "minWidth": 0,
          "textAlign": undefined,
        }
      }
    >
      <div
        className="root uui-text uui-size-18 lineHeight fontSize uui-color-tertiary uui-font-weight-400 uui-font-style-normal uui-typography fileName container"
        style={
          Object {
            "--uui-text-font-size": "14px",
            "--uui-text-line-height": "18px",
          }
        }
      >
        Test
      </div>
      <div
        className="root uui-text uui-size-18 lineHeight fontSize uui-color-tertiary uui-font-weight-400 uui-font-style-normal uui-typography container"
        style={
          Object {
            "--uui-text-font-size": "14px",
            "--uui-text-line-height": "18px",
          }
        }
      >
        DOC, 
        0 Bytes of 
        12.25 KB
      </div>
    </div>
    <div
      className="iconsBlock"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <svg
        className="root"
        height={18}
        width={18}
      >
        <circle
          cx={9}
          cy={9}
          fill="transparent"
          r={3}
          strokeDasharray={18.84955592153876}
          strokeDashoffset={18.84955592153876}
          strokeWidth={6}
        />
        <circle
          cx={9}
          cy={9}
          fill="transparent"
          r={8}
          strokeWidth={1}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`FileCard should be rendered correctly with img file 1`] = `
<div
  className="flexCell root uui-file_card"
  style={
    Object {
      "alignSelf": undefined,
      "flexBasis": "0",
      "flexGrow": undefined,
      "flexShrink": undefined,
      "minWidth": "140px",
      "textAlign": undefined,
    }
  }
>
  <div
    className="uui-flex-row root uui-size-36 container align-items-top"
    style={
      Object {
        "columnGap": "6px",
        "rowGap": undefined,
      }
    }
  >
    <div
      className="container uui-icon uui-enabled imgColor"
      style={Object {}}
    >
      <svg
        className=""
        height={24}
        width={24}
      />
    </div>
    <div
      className="flexCell"
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "100%",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "minWidth": 0,
          "textAlign": undefined,
        }
      }
    >
      <div
        className="root uui-text uui-size-18 lineHeight fontSize uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography fileName container"
        style={
          Object {
            "--uui-text-font-size": "14px",
            "--uui-text-line-height": "18px",
          }
        }
      >
        Test
      </div>
      <div
        className="root uui-text uui-size-18 lineHeight fontSize uui-color-tertiary uui-font-weight-400 uui-font-style-normal uui-typography container"
        style={
          Object {
            "--uui-text-font-size": "14px",
            "--uui-text-line-height": "18px",
          }
        }
      >
        GIF, 
        12.25 KB
      </div>
    </div>
    <div
      className="iconsBlock"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        className="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root"
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <div
          className="container uui-icon uui-enabled"
          style={Object {}}
        >
          <svg
            className=""
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;
